--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -54,11 +54,7 @@
       "default": "main-menu"
     }
   ],
-  "blocks": [
-    {
-      "type": "@app"
-    }
-  ],
+  "blocks": [],
   "presets": [
     {
       "name": "Header Section",
