--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -3,7 +3,7 @@
 -%}
 
 <div class="relative bg-white">
-  <div class="mx-auto px-4 sm:px-6">
+  <div class="mx-auto max-w-7xl px-4 sm:px-6">
     <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
       <!-- STORE NAME / STORE LOGO -->
       <div class="flex justify-start lg:flex-1 truncate">
