--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -17,7 +17,13 @@
         {% if menu.links.size > 0 %}
           {% for link in menu.links %}
             <div class="relative">
-              <a href="{{ link.url }}" class="text-base text-gray-500 hover:text-gray-900">{{ link.title }}</a>
+              <a
+                class="{% if link.active %} text-red-400 {% endif %}"
+                href="{{ link.url }}"
+                class="text-base text-gray-500 hover:text-gray-900"
+              >
+                {{- link.title -}}
+              </a>
             </div>
             {% if link.links != blank %}
               <div class="relative">
