--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -13,7 +13,7 @@
       {% comment %} product info {% endcomment %}
       <div class="relative">
         <div style="height: fit-content;" class=" top-5 p-2 ">
-          {% form 'product', product %}
+          {% form 'product', product, id: 'product-form-one', novalidate: 'novalidate' %}
             {% comment %} vendor {% endcomment %}
             <input type="hidden" name="id" value="{{ current_variant.id  }}">
             {% for block in section.blocks %}
@@ -46,7 +46,7 @@
 
                 {% when 'separate_select' %}
                   {% comment %} variant selector separate select variant_selector_separate_select {% endcomment %}
-                  <div class="my-3">
+                  <variant-selector-one data-url="{{ product.url }}" data-section="{{ section.id }}" class="my-3">
                     <h2>Variant Selector Separate Select</h2>
                     {% unless product.has_only_default_variant %}
                       <div data-url="{{ product.url }}" data-section{{ section.id }}>
@@ -70,31 +70,20 @@
                               {% endfor %}
                             </select>
                           </div>
+                          {% comment %} #script {% endcomment %}
+                          <script type="application/json">
+                            {{ product.variants | json }}
+                          </script>
                         {%- endfor -%}
                       </div>
                     {% endunless %}
-                  </div>
+                  </variant-selector-one>
                 {% when 'selector_swatch' %}
                   <div>
                     <h2 class="text-2xl">Variant selector swatch</h2>
                   </div>
                 {% when 'add_to_cart' %}
-                  <div class="my-3">
-                    <button
-                      {% if current_variant.available == false %}
-                        disabled
-                      {% endif %}
-                      type="submit"
-                      name="add"
-                      class="w-full px-6 py-4 bg-gray-900 hover:bg-gray-700 cursor-pointer text-white"
-                    >
-                      {%- if current_variant.available == false -%}
-                        Sold out
-                      {%- else -%}
-                        Add to cart
-                      {%- endif -%}
-                    </button>
-                  </div>
+                  {% render 'product-add-to-cart-one', section: section, current_variant: current_variant %}
                 {% else %}
                   <div>Add Block from customizer</div>
               {% endcase %}
@@ -108,6 +97,134 @@
     </div>
   </div>
 </div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    //---------------------------------------
+    class VariantSelector extends HTMLElement {
+      // this.options
+      // this.currentVariant
+      constructor() {
+        super();
+        this.addEventListener('change', this.onVariantChange);
+        this.product_form = document.getElementById('product-form-one');
+      }
+      onVariantChange() {
+        this.getSelectedOptions();
+        this.getVariantJson();
+        this.getSelectedVaiant();
+        if (this.currentVariant) {
+          this.updateUrl();
+          this.updateFormId();
+          this.updatePrice();
+        }
+      }
+
+      getSelectedOptions() {
+        this.options = Array.from(this.querySelectorAll('select'), (select) => {
+          return select.value;
+        });
+        //   console.log(' options', this.options);
+      }
+
+      getVariantJson() {
+        const scriptTag = this.querySelector('script[type="application/json"]');
+
+        this.variantData = JSON.parse(scriptTag.textContent);
+
+        //  console.log(this.variantData);
+        return this.variantData;
+      }
+      // this function is tuough to understand
+      getSelectedVaiant() {
+        this.currentVariant = this.getVariantJson().find((variant) => {
+          const findings = !variant.options
+            .map((option, index) => {
+              return this.options[index] === option;
+            })
+            .includes(false);
+
+          if (findings) {
+            return variant;
+          }
+        });
+
+        //  console.log('currentvariant', this.currentVariant);
+      }
+
+      // updateUrl
+      updateUrl() {
+        if (!this.currentVariant) {
+          return;
+        }
+        window.history.replaceState({}, {}, `${this.dataset.url}?variant=${this.currentVariant.id}`);
+      }
+
+      // update form id
+      updateFormId() {
+        const form = document.getElementById('product-form-one');
+        const form_id_input = this.product_form.querySelector('input[name="id"]');
+        form_id_input.value = this.currentVariant.id;
+        // console.log
+        //    console.log('id', idInput);
+      }
+      // update price
+      updatePrice() {
+        const url = this.dataset.url;
+        fetch(`${url}?variant=${this.currentVariant.id}&section_id=${this.dataset.section}`)
+          .then((response) => response.text())
+          .then((responseText) => {
+            const html = new DOMParser().parseFromString(responseText, 'text/html');
+
+            // price
+            const price_id = `price-${this.dataset.section}`;
+            const old_prict = this.product_form.querySelector(`#${price_id}`);
+            const new_price = html.querySelector(`#${price_id}`);
+
+            if (old_prict && new_price) {
+              old_prict.innerHTML = new_price.innerHTML;
+            }
+
+            // update add to cart button
+            const addToCartId = `addtocart-${this.dataset.section}`;
+            // console.log(this.currentVariant.available);
+            const addToCartButton = this.product_form.querySelector(`#${addToCartId}`);
+
+            //     const addToCartButton = document.querySelector(`#addtocart-${this.dataset.section}`);
+
+            if (this.currentVariant.available) {
+              // ✅ Variant is available — ENABLE button
+              addToCartButton.removeAttribute('disabled');
+              addToCartButton.removeAttribute('aria-disabled');
+              addToCartButton.textContent = 'Add to cart';
+
+              // Add active styles
+              addToCartButton.classList.add('bg-gray-900', 'hover:bg-gray-700', 'cursor-pointer');
+
+              // Remove disabled styles
+              addToCartButton.classList.remove('bg-gray-400', 'opacity-50', 'cursor-not-allowed');
+            } else {
+              // ❌ Variant is unavailable — DISABLE button
+              addToCartButton.setAttribute('disabled', 'true');
+              addToCartButton.setAttribute('aria-disabled', 'true');
+              addToCartButton.textContent = 'Sold out';
+
+              // Remove active styles
+              addToCartButton.classList.remove('bg-gray-900', 'hover:bg-gray-700', 'cursor-pointer');
+
+              // Add disabled styles
+              addToCartButton.classList.add('bg-gray-400', 'opacity-50', 'cursor-not-allowed');
+            }
+          });
+
+        //        const variant_id = this.currentVariant.id;
+      }
+    }
+    customElements.define('variant-selector-one', VariantSelector);
+
+    ///--------------------------------------------------
+  });
+</script>
 
 {% schema %}
 {
