--- a/snippets/product-price-1.liquid
+++ b/snippets/product-price-1.liquid
@@ -1,4 +1,4 @@
-<div class="my-3">
+<div id="price-{{ section.id }}" class="my-3">
   <span class="text-base text-gray-500">{{ current_variant.price | money_with_currency }} </span>
   {% comment %} empare at price {% endcomment %}
   {% if current_variant.compare_at_price > current_variant.price %}
